<resources>
    <string name="app_name">XuiMod</string>
    <string name="title_activity_list_view_blacklist">Blacklist (ListView Animation)</string>
    <string name="systemui_title">SystemUI</string>
    <string name="animation_title">Animation</string>
    <string name="framework_title">Framework</string>
    <string name="options_title">App Options</string>
    <string name="systemui_restart">Restart SystemUI</string>
    <string name="systemui_restart_summary">Restart SystemUI if changes did not apply \n(Requires SU permissions)</string>
    <string name="systemui_restart_dialog">Confirm restart SystemUI?</string>
    <string name="systemui_restart_required">Toggling this requires SystemUI to be restarted to take effect.\n\nRestart SystemUI?</string>
    <string name="seconds_title">Clock Mods</string>
    <string name="seconds_enable_title">Enable Seconds</string>
    <string name="seconds_enable_summary">Refresh Clock every second in Status Bar Clock</string>
    <string name="seconds_bold_title">Bold Clock</string>
    <string name="seconds_bold_summary">Bold the Clock Font</string>
    <string name="seconds_size_title">Clock Size</string>
    <string name="seconds_size_summary">Font Size of the Clock in percentage</string>
    <string name="seconds_use_html_title">Use HTML</string>
    <string name="seconds_use_html_summary">Parse HTML tags in custom format.</string>
    <string name="seconds_lettercase_title">Letter Case</string>
    <string name="seconds_lettercase_summary">Override all the letters with the specified case</string>
    <string name="seconds_lettercase_default">Default</string>
    <string name="seconds_lettercase_lowercase">Lowercase</string>
    <string name="seconds_lettercase_uppercase">Uppercase</string>
    <string name="seconds_custom_title">Custom Format</string>
    <string name="seconds_custom_summary">Use custom SimpleDateFormat for clock \n(Leave Blank for Default)</string>
    <string name="notif_title">Notification Mods</string>
    <string name="notif_quick_settings_random_title">Random Quick Settings Tile Color</string>
    <string name="notif_quick_settings_random_summary">Randomizes background color of each Quick Settings tile\n(SystemUI must be restarted for changes to take effect)</string>
    <string name="notif_choose_color_title">Select Random Colors</string>
    <string name="notif_choose_color_summary">SystemUI must be restarted for colors to take effect</string>
    <string name="anim_title">Animation Mods</string>
    <string name="anim_listview_title">ListView Animation</string>
    <string name="anim_systemwide_title">System Animation</string>
    <string name="window_transitions_title">Window Transitions</string>
    <string name="window_transitions_summary">Select a custom animation for window transitions\n(Requires reboot to take effect)</string>
    <string name="window_transitions_default">Default (in ROM)</string>
    <string name="window_transitions_xylon">Xylon ROM Transitions</string>
    <string name="window_transitions_tn">TN Transitions</string>
    <string name="window_transitions_honami">Xperia Z1 Transitions</string>
    <string name="window_transitions_toko">TokoROM Transitions</string>
    <string name="anim_controls_main_title">Animation Controls</string>
    <string name="anim_controls_main_summary">Control individual system transitions</string>
    <string name="anim_controls_no_override_title">Prevent App Overrides</string>
    <string name="anim_controls_no_override_summary">Prevent apps from overriding transitions.</string>
    <string name="anim_controls_duration_title">Animation Duration</string>
    <string name="activity_open_title">Open In-App Activity Animation</string>
    <string name="activity_close_title">Close In-App Activity Animation</string>
    <string name="task_open_title">Launch From In App Animation</string>
    <string name="task_close_title">Return To Previous Animation</string>
    <string name="task_move_to_front_title">Move To Front Animation</string>
    <string name="task_move_to_back_title">Move To Back Animation</string>
    <string name="wallpaper_open_title">Return To Homescreen Animation</string>
    <string name="wallpaper_close_title">Launch From Homescreen Animation</string>
    <string name="wallpaper_intra_open_title">Recents Page Open Animation</string>
    <string name="wallpaper_intra_close_title">Recents Page Close Animation</string>
    <string name="animation_default">Default</string>
    <string name="animation_fade">Fade</string>
    <string name="animation_slide_right">Slide in right</string>
    <string name="animation_slide_left">Slide in left</string>
    <string name="animation_slide_right_no_fade">Slide in right (No fade)</string>
    <string name="animation_slide_left_no_fade">Slide in left (No fade)</string>
    <string name="animation_slide_up">Slide in bottom</string>
    <string name="animation_slide_down">Slide in top</string>
    <string name="animation_translucent">Translucent</string>
    <string name="animation_grow_shrink">Grow in (Top)</string>
    <string name="animation_grow_shrink_center">Grow in (Center)</string>
    <string name="animation_grow_shrink_bottom">Grow in (Bottom)</string>
    <string name="animation_grow_shrink_left">Grow in (Left)</string>
    <string name="animation_grow_shrink_right">Grow in (Right)</string>
    <string name="animation_random">Random</string>
    <string name="anim_ime_main_title">IME Animations</string>
    <string name="anim_ime_enter_title">IME Enter Animation</string>
    <string name="anim_ime_enter_summary">Shown when opening an Input Method Editor</string>
    <string name="anim_ime_exit_title">IME Exit Animation</string>
    <string name="anim_ime_exit_summary">Shown when closing an Input Method Editor</string>
    <string name="anim_ime_interpolater_title">IME Interpolater</string>
    <string name="anim_ime_duration_title">IME Animation Duration</string>
    <string name="anim_ime_delay_title">IME Animation Delay</string>
    <string name="anim_ime_delay_summary">Delay the enter animation (May improve animation lag)</string>
    <string name="anim_ime_test_title">Test IME Animation Here</string>
    <string name="anim_ime_entries_fancy">Android Fancy IME</string>
    <string name="anim_ime_entries_tn">TN Fly</string>
    <string name="anim_ime_entries_xylon_slide">Xylon Slide</string>
    <string name="anim_toast_main_title">Toast Animation</string>
    <string name="anim_toast_enter_title">Toast Enter Animation</string>
    <string name="anim_toast_enter_summary">Shown when a toast appears</string>
    <string name="anim_toast_exit_title">Toast Exit Animation</string>
    <string name="anim_toast_exit_summary">Shown when toast disappears</string>
    <string name="anim_toast_interpolater_title">Toast Interpolater</string>
    <string name="anim_toast_duration_title">Toast Animation Duration</string>
    <string name="anim_toast_test_title">Test Toast Animation</string>
    <string name="anim_toast_entries_none">No Animation</string>
    <string name="anim_toast_entries_toko">TokoROM Toast</string>
    <string name="anim_toast_entries_tn">TN Toast</string>
    <string name="anim_toast_entries_xylon">Xylon Toast</string>
    <string name="anim_toast_entries_z1">Xperia Z1 Toast</string>
    <string name="anim_listview_anim">ListView Animation</string>
    <string name="anim_listview_anim_summary">Animation used when scrolling ListViews</string>
    <string name="anim_listview_interpolator">ListView Interpolator</string>
    <string name="anim_listview_interpolator_summary">Interpolator used when scrolling ListViews</string>
    <string name="anim_listview_duration">Animation duration</string>
    <string name="anim_listview_duration_summary">Change animation duration</string>
    <string name="anim_listview_test">Test ListView</string>
    <string name="anim_listview_test_summary">Open Test Dialog with a ListView</string>
    <string name="anim_listview_cache">ListView Persistent Cache</string>
    <string name="anim_listview_cache_summary">Type of cache to persist in memory \n(No Cache is Disabled. Just Persisted)</string>
    <string name="anim_listview_blacklist">Blacklist Apps</string>
    <string name="anim_listview_blacklist_summary">Prevent Apps from animating</string>
    <string name="other_title">Other Mods</string>
    <string name="volume_title">Volume Buttons</string>
    <string name="volume_timeout_title">Volume Panel Timeout</string>
    <string name="volume_timeout_summary">Change Volume Panel Timeout after adjusting Volume</string>
    <string name="volume_timeout_dialog">State Volume Panel Timeout in milliseconds. Non-numeric characters are ignored.\n(1000 milliseconds = 1 second)</string>
    <string name="volume_alpha_title">Volume Panel Alpha</string>
    <string name="volume_alpha_summary">Change Volume Panel Transparency</string>
    <string name="volume_alpha_dialog" formatted="false">State Volume Panel Transparency Percentage. Non-numeric characters are ignored.\n(Maximum 100% &amp; Minimum 25%)</string>
    <string name="lockscreen_title">Lockscreen Mods</string>
    <string name="lockscreen_disable_title">Disable Volume Keys</string>
    <string name="lockscreen_disable_summary">Prevent Ring Mode from changing in Lock Screen.\n(Also disables media long press)</string>
    <string name="lockscreen_torch_title">Lockscreen Torch</string>
    <string name="lockscreen_torch_summary">Hold Hardware Buttons for Torch.\nRelease to switch off.</string>
    <string name="lockscreen_torch_buttons_title">Hardware Button</string>
    <string name="lockscreen_torch_buttons_summary">Choose the Hardware Buttons to trigger Torch.</string>
    <string name="lockscreen_torch_home_title">Use Home Button</string>
    <string name="lockscreen_torch_menu_title">Use Menu Button</string>
    <string name="lockscreen_torch_back_title">Use Back Button</string>
    <string name="lockscreen_torch_torch_type">Choose Torch App</string>
    <string name="batterybar_title">BatteryBar Mod</string>
    <string name="batterybar_enable_title">Enable BatteryBar</string>
    <string name="batterybar_style_title">Symmetric Bar</string>
    <string name="batterybar_style_summary">If checked, BatteryBar will be symmetric instead of a regular bar</string>
    <string name="batterybar_height_title">Bar Height</string>
    <string name="batterybar_height_summary">Height of BatteryBar in dp</string>
    <string name="batterybar_height_dialog">Height of BatteryBar in dp.\n(Non-numeric characters are ignored.)</string>
    <string name="batterybar_animate_title">Animate Charging</string>
    <string name="batterybar_animate_summary">Show Animation while Charging</string>
    <string name="batterybar_color_title">BatteryBar Color</string>
    <string name="batterybar_color_screen_title">Customize Color</string>
    <string name="batterybar_color_100_title">Color for 100%</string>
    <string name="batterybar_color_99_title">Color for 99% and below</string>
    <string name="batterybar_color_80_title">Color for 80% and below</string>
    <string name="batterybar_color_60_title">Color for 60% and below</string>
    <string name="batterybar_color_40_title">Color for 40% and below</string>
    <string name="batterybar_color_20_title">Color for 20% and below</string>
    <string name="batterybar_color_charge_title">Color for Charging</string>
    <string name="batterybar_bg_color_title">Background Color</string>
    <string name="random_color_1">Random Color #1</string>
    <string name="random_color_2">Random Color #2</string>
    <string name="random_color_3">Random Color #3</string>
    <string name="random_color_4">Random Color #4</string>
    <string name="random_color_5">Random Color #5</string>
    <string name="random_color_6">Random Color #6</string>
    <string name="random_color_7">Random Color #7</string>
    <string name="random_color_8">Random Color #8</string>
</resources>