<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name" >

    <PreferenceCategory
        android:key="systemui_category"
        android:title="@string/systemui_title" >
    </PreferenceCategory>

    <!-- Clock Mods Screen -->
    <PreferenceScreen
        android:key="seconds_screen"
        android:title="@string/seconds_title" >

        <CheckBoxPreference
            android:key="seconds_enable"
            android:summary="@string/seconds_enable_summary"
            android:title="@string/seconds_enable_title" />
        <CheckBoxPreference
            android:key="seconds_bold"
            android:summary="@string/seconds_bold_summary"
            android:title="@string/seconds_bold_title" />
		<CheckBoxPreference
            android:key="seconds_use_html"
            android:summary="@string/seconds_use_html_summary"
            android:title="@string/seconds_use_html_title" />

		<ListPreference
		    android:defaultValue="0"
		    android:dialogIcon="@drawable/ic_launcher"
		    android:dialogTitle="@string/seconds_lettercase_title"
		    android:entries="@array/seconds_lettercase_entries"
		    android:entryValues="@array/seconds_lettercase_values"
		    android:key="seconds_lettercase"
		    android:summary="@string/seconds_lettercase_summary"
		    android:title="@string/seconds_lettercase_title" />

        <EditTextPreference
            android:dialogIcon="@drawable/ic_launcher"
            android:dialogMessage="@string/seconds_custom_summary"
            android:dialogTitle="@string/seconds_custom_title"
            android:key="seconds_custom"
            android:summary="@string/seconds_custom_summary"
            android:title="@string/seconds_custom_title" />

        <Preference
            android:key="seconds_restart"
            android:summary="@string/systemui_restart_summary"
            android:title="@string/systemui_restart" />
    </PreferenceScreen>
    <!-- BatteryBar Screen -->
    <PreferenceScreen
        android:key="batterybar_screen"
        android:title="@string/batterybar_title" >
        <SwitchPreference
            android:key="batterybar_enable"
            android:title="@string/batterybar_enable_title" />
        <CheckBoxPreference
            android:dependency="batterybar_enable"
            android:key="batterybar_animate"
            android:summary="@string/batterybar_animate_summary"
            android:title="@string/batterybar_animate_title" />
        <CheckBoxPreference
            android:dependency="batterybar_enable"
            android:key="batterybar_style"
            android:summary="@string/batterybar_style_summary"
            android:title="@string/batterybar_style_title" />
        
        <com.zst.xposed.xuimod.preference.BarHeight
            android:defaultValue="2"
            android:dependency="batterybar_enable"
            android:dialogIcon="@drawable/ic_launcher"
            android:dialogMessage="@string/batterybar_height_dialog"
            android:dialogTitle="@string/batterybar_height_title"
            android:persistent="false"
            android:key="batterybar_height"
            android:summary="@string/batterybar_height_summary"
            android:title="@string/batterybar_height_title" />
        
        <Preference
            android:key="batterybar_color_screen"
            android:dependency="batterybar_enable" 
            android:title="@string/batterybar_color_screen_title" />
        
        <Preference
            android:key="batterybar_restart"
            android:summary="@string/systemui_restart_summary"
            android:title="@string/systemui_restart" />
    </PreferenceScreen>
    
    <!-- Notification Mods Screen -->
    <PreferenceScreen
        android:key="notif_screen"
        android:title="@string/notif_title" >
        <CheckBoxPreference
            android:key="notif_quick_settings_random"
            android:summary="@string/notif_quick_settings_random_summary"
            android:title="@string/notif_quick_settings_random_title" />
        
        <Preference
            android:key="notif_choose_color_random"
            android:title="@string/notif_choose_color_title" />
    </PreferenceScreen>
        
    <!-- Animation Mod Category -->
    <PreferenceCategory
        android:key="animation_category"
        android:title="@string/animation_title" >
    </PreferenceCategory>
    <!-- Animations Mod Screen -->
    <PreferenceScreen
        android:key="anim_lv_screen"
        android:title="@string/anim_listview_title" >

        <!-- ListView Screen -->
        <PreferenceCategory
            android:key="listview_title_category"
            android:title="@string/anim_listview_title" >
        </PreferenceCategory>

        <ListPreference
            android:defaultValue="0"
            android:dialogIcon="@drawable/ic_launcher"
            android:dialogTitle="@string/anim_listview_anim"
            android:entries="@array/listview_animation_entries"
            android:entryValues="@array/listview_animation_values"
            android:key="listview_animation"
            android:summary="@string/anim_listview_anim_summary"
            android:title="@string/anim_listview_anim" />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/anim_listview_interpolator"
            android:entries="@array/listview_interpolator_entries"
            android:entryValues="@array/listview_interpolator_values"
            android:key="listview_interpolator"
            android:summary="@string/anim_listview_interpolator_summary"
            android:title="@string/anim_listview_interpolator" />
        <com.zst.xposed.xuimod.preference.AnimationDuration
            android:key="listview_duration"
            android:dialogLayout="@layout/pref_seekbar"
            android:dialogTitle="@string/anim_listview_duration"
            android:persistent="false"
            android:summary="@string/anim_listview_duration_summary"
            android:title="@string/anim_listview_duration" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/anim_listview_cache"
            android:entries="@array/listview_cache_entries"
            android:entryValues="@array/listview_cache_values"
            android:key="listview_cache"
            android:summary="@string/anim_listview_cache_summary"
            android:title="@string/anim_listview_cache" />

        <Preference
            android:key="listview_testing"
            android:summary="@string/anim_listview_test_summary"
            android:title="@string/anim_listview_test" />
        
        <Preference
            android:key="listview_blacklist"
            android:summary="@string/anim_listview_blacklist_summary"
            android:title="@string/anim_listview_blacklist" />
   </PreferenceScreen>
   <PreferenceScreen
        android:key="anim_systemwide_screen"
        android:title="@string/anim_systemwide_title" >
        <!-- Systemwide Anim Screen -->
        <PreferenceCategory
            android:key="system_wide_title_category"
            android:title="@string/anim_systemwide_title" >
        </PreferenceCategory>

        <Preference
            android:key="animation_controls"
            android:summary="@string/anim_controls_main_summary"
            android:title="@string/anim_controls_main_title" />
        
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/window_transitions_title"
            android:entries="@array/window_transitions_entries"
            android:entryValues="@array/window_transitions_values"
            android:key="window_transitions"
            android:summary="@string/window_transitions_summary"
            android:title="@string/window_transitions_title" />
        
        <PreferenceCategory
            android:title="@string/anim_ime_main_title" >
        </PreferenceCategory>
        
	        <ListPreference
	            android:defaultValue="0"
	            android:dialogIcon="@drawable/ic_launcher"
	            android:dialogTitle="@string/anim_ime_enter_title"
	            android:entries="@array/anim_ime_entries"
	            android:entryValues="@array/anim_ime_values"
	            android:key="anim_ime_enter"
	            android:summary="@string/anim_ime_enter_summary"
	            android:title="@string/anim_ime_enter_title" />
	        
	        <ListPreference
	            android:defaultValue="0"
	            android:dialogIcon="@drawable/ic_launcher"
	            android:dialogTitle="@string/anim_ime_exit_title"
	            android:entries="@array/anim_ime_entries"
	            android:entryValues="@array/anim_ime_values"
	            android:key="anim_ime_exit"
	            android:summary="@string/anim_ime_exit_summary"
	            android:title="@string/anim_ime_exit_title" />
	        
	        <ListPreference
	            android:defaultValue="0"
	            android:dialogIcon="@drawable/ic_launcher"
	            android:dialogTitle="@string/anim_ime_interpolater_title"
	            android:entries="@array/listview_interpolator_entries"
	            android:entryValues="@array/listview_interpolator_values"
	            android:key="anim_ime_interpolater"
	            android:title="@string/anim_ime_interpolater_title" />
	        
	        <com.zst.xposed.xuimod.preference.AnimationDuration
	            android:key="anim_ime_duration"
	            android:dialogLayout="@layout/pref_seekbar"
	            android:dialogTitle="@string/anim_ime_duration_title"
	            android:title="@string/anim_ime_duration_title" />
	        
	        <com.zst.xposed.xuimod.preference.TestKeyboard
	            android:key="anim_ime_test"
	            hint="@string/anim_ime_test_title" />
    </PreferenceScreen>
    
    <!-- Framework Mod Category -->
    <PreferenceCategory
        android:key="framework_category"
        android:title="@string/framework_title" >
    </PreferenceCategory>
    
    
    <!-- Lockscreen Mod Screen -->
    <PreferenceScreen
        android:key="lockscreen_screen"
        android:title="@string/lockscreen_title" >

        <CheckBoxPreference
            android:key="lockscreen_volume"
            android:summary="@string/lockscreen_disable_summary"
            android:title="@string/lockscreen_disable_title" />

        
        <PreferenceCategory
            android:key="lockscreen_torch_category"
            android:title="@string/lockscreen_torch_title" >
        </PreferenceCategory>
        <SwitchPreference
            android:key="lockscreen_torch"
            android:summary="@string/lockscreen_torch_summary"
            android:title="@string/lockscreen_torch_title" />
        <!-- Lockscreen Torch Buttons -->
        <PreferenceScreen
        android:key="lockscreen_torch_buttons_screen"
        android:title="@string/lockscreen_torch_buttons_title"
        android:summary="@string/lockscreen_torch_buttons_summary" >
        
        <CheckBoxPreference
            android:key="lockscreen_torch_home"
            android:title="@string/lockscreen_torch_home_title"
            android:dependency="lockscreen_torch" />
        
        <CheckBoxPreference
            android:key="lockscreen_torch_menu"
            android:title="@string/lockscreen_torch_menu_title"
            android:dependency="lockscreen_torch" />
        
        <CheckBoxPreference
            android:key="lockscreen_torch_back"
            android:title="@string/lockscreen_torch_back_title"
            android:dependency="lockscreen_torch" />
        
        </PreferenceScreen>
        <ListPreference
            android:defaultValue="0"
            android:dialogIcon="@drawable/ic_launcher"
            android:dialogTitle="@string/lockscreen_torch_torch_type"
            android:entries="@array/lockscreen_torch_type_entry"
            android:entryValues="@array/lockscreen_torch_type_value"
            android:key="lockscreen_torch_type"
            android:title="@string/lockscreen_torch_torch_type" />
        
    </PreferenceScreen>
    <!-- Other Mods Screen -->
    <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="other_screen"
        android:title="@string/other_title" >
        <PreferenceCategory
            android:key="volume_category"
            android:title="@string/volume_title" >
        </PreferenceCategory>

        <EditTextPreference
            android:defaultValue="3000"
            android:dialogIcon="@drawable/ic_launcher"
            android:dialogMessage="@string/volume_timeout_dialog"
            android:dialogTitle="@string/volume_timeout_title"
            android:key="volume_timeout"
            android:summary="@string/volume_timeout_summary"
            android:title="@string/volume_timeout_title" />
        <com.zst.xposed.xuimod.preference.VolumePanelAlpha
            android:dialogMessage="@string/volume_alpha_dialog"
            android:dialogTitle="@string/volume_alpha_title"
            android:persistent="false"
            android:dialogLayout="@layout/pref_seekbar"
            android:summary="@string/volume_alpha_summary"
            android:title="@string/volume_alpha_title" />
    </PreferenceScreen>

</PreferenceScreen>